# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/channel.gni")
import("//weblayer/variables.gni")

declare_args() {
  # Always show a launcher icon to open WebView developer UI for all build variants and channels.
  # When this is off, all prestable build variants will still show launcher icons except for
  # Monochrome which will only show its launcher icon when it's the selected WebView provider.
  webview_devui_always_show_icon = false
}

# Used in standalone and trichrome, configures whether the launcher icon is on or off all the time
standalone_or_trichrome_icon_default_enabled_state =
    android_channel != "stable" || webview_devui_always_show_icon

# Used only in monochrome, configures whether the launcher icon is on all the time vs. on conditionally
monochrome_launcher_icon_default_enabled_state = webview_devui_always_show_icon

system_webview_android_manifest =
    "$root_gen_dir/android_webview/system_webview_apk/AndroidManifest.xml"
trichrome_webview_android_manifest =
    "$root_gen_dir/android_webview/trichrome_webview_apk/AndroidManifest.xml"
trichrome_webview_64_32_android_manifest = "$root_gen_dir/android_webview/trichrome_webview_64_32_apk/AndroidManifest.xml"
trichrome_webview_32_android_manifest =
    "$root_gen_dir/android_webview/trichrome_webview_32_apk/AndroidManifest.xml"

upstream_only_webview_deps = [
  "//android_webview:platform_service_bridge_upstream_implementation_java",
  "//android_webview/nonembedded:icon_resources",
]

if (webview_includes_weblayer) {
  upstream_only_webview_deps +=
      [ "//weblayer/browser/java:gms_bridge_upstream_impl_java" ]
}

webview_product_config_java_package = "org.chromium.android_webview"
