# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("blocked_content") {
  sources = [
    "pref_names.cc",
    "pref_names.h",
    "safe_browsing_triggered_popup_blocker.cc",
    "safe_browsing_triggered_popup_blocker.h",
  ]
  deps = [
    "//base",
    "//components/pref_registry",
    "//components/prefs",
    "//components/safe_browsing/core/db:util",
    "//components/subresource_filter/content/browser",
    "//components/user_prefs",
    "//content/public/browser",
    "//third_party/blink/public/common",
  ]
}
