# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("enterprise") {
  sources = [
    "browser/reporting/policy_info.cc",
    "browser/reporting/policy_info.h",
  ]

  deps = [
    "//base",
    "//components/policy/core/browser",
    "//components/policy/core/common",
    "//components/policy/proto",
    "//components/strings",
  ]
}
