# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/clang/clang.gni")
import("//testing/test.gni")

group("mirroring_tests") {
  testonly = true
  public_deps = [
    "browser:unittests",
    "service:unittests",
  ]
}

test("mirroring_unittests") {
  deps = [
    ":mirroring_tests",
    "//media/test:run_all_unittests",
  ]

  # TODO(https://crbug/1086636): Remove when the libdbus hack is removed.
  if (llvm_force_head_revision && is_linux && !is_chromeos) {
    ldflags = [ "-Wl,--allow-shlib-undefined" ]
  }
}
