# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("permissions") {
  sources = [
    "features.cc",
    "features.h",
    "permission_decision_auto_blocker.cc",
    "permission_decision_auto_blocker.h",
    "permission_request.cc",
    "permission_request.h",
    "permission_request_id.cc",
    "permission_request_id.h",
    "permission_result.cc",
    "permission_result.h",
    "permission_uma_util.cc",
    "permission_uma_util.h",
    "permission_util.cc",
    "permission_util.h",
    "permissions_client.cc",
    "permissions_client.h",
  ]
  deps = [
    "//base",
    "//components/content_settings/core/browser",
    "//components/keyed_service/content",
    "//components/ukm/content",
    "//components/variations",
    "//content/public/browser",
    "//services/metrics/public/cpp:ukm_builders",
  ]
  if (is_android) {
    deps += [ "//components/permissions/android:jni" ]
  }
}

source_set("test_support") {
  testonly = true
  sources = [
    "test/test_permissions_client.cc",
    "test/test_permissions_client.h",
  ]
  deps = [
    ":permissions",
    "//components/sync_preferences:test_support",
  ]
}

source_set("unit_tests") {
  testonly = true
  sources = [
    "permission_decision_auto_blocker_unittest.cc",
    "permission_uma_util_unittest.cc",
  ]
  deps = [
    ":permissions",
    ":test_support",
    "//base",
    "//base/test:test_support",
    "//components/content_settings/core/browser",
    "//components/keyed_service/content",
    "//content/test:test_support",
    "//testing/gtest",
  ]
}
