# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("prerender") {
  sources = [
    "prerender_final_status.cc",
    "prerender_final_status.h",
    "prerender_origin.cc",
    "prerender_origin.h",
    "prerender_types.h",
  ]
  deps = [ "//base" ]
}
