# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/linux/gtk/gtk.gni")
import("//build/config/ui.gni")
import("//ui/ozone/ozone.gni")

component("gtk") {
  output_name = "ui_gtk"
  sources = [
    "gtk_ui_delegate.cc",
    "gtk_ui_delegate.h",
  ]
  public_deps = [
    "//build/config/linux/gtk",
    "//ui/base:buildflags",
    "//ui/gfx:native_widget_types",
  ]
  defines = [ "IS_UI_GTK_IMPL" ]
}

component("x") {
  output_name = "ui_gtk_x"
  sources = [
    "gtk_event_loop_x11.cc",
    "gtk_event_loop_x11.h",
    "gtk_ui_delegate_x11.cc",
    "gtk_ui_delegate_x11.h",
  ]
  public_deps = [ ":gtk" ]
  deps = [
    "//base",
    "//ui/base",
    "//ui/events/platform/x11",
    "//ui/gfx/x",
  ]
  defines = [ "IS_UI_GTK_X_IMPL" ]
  configs += [ "//build/config/linux:x11" ]
}
