# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_library("java") {
  sources = [
    "android/java/src/org/chromium/chrome/browser/tabmodel/EmptyTabModel.java",
    "android/java/src/org/chromium/chrome/browser/tabmodel/TabList.java",
    "android/java/src/org/chromium/chrome/browser/tabmodel/TabModel.java",
    "android/java/src/org/chromium/chrome/browser/tabmodel/TabModelObserver.java",
    "android/java/src/org/chromium/chrome/browser/tabmodel/TabModelUtils.java",
  ]
  deps = [
    "//base:base_java",
    "//chrome/browser/profiles/android:java",
    "//chrome/browser/tab:java",
  ]
}
