# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("sharing") {
  sources = [
    "sharing_impl.cc",
    "sharing_impl.h",
    "webrtc/sharing_webrtc_connection.cc",
    "webrtc/sharing_webrtc_connection.h",
  ]

  deps = [
    "//jingle:webrtc_glue",
    "//third_party/webrtc_overrides:webrtc_component",
  ]

  public_deps = [
    "//base",
    "//chrome/services/sharing/public/cpp",
    "//chrome/services/sharing/public/mojom",
    "//mojo/public/cpp/bindings",
  ]
}

source_set("unit_tests") {
  testonly = true

  sources = [
    "sharing_impl_unittest.cc",
    "webrtc/sharing_webrtc_connection_integration_test.cc",
    "webrtc/sharing_webrtc_connection_unittest.cc",
    "webrtc/test/fake_network_manager.cc",
    "webrtc/test/fake_network_manager.h",
    "webrtc/test/fake_packet_socket_factory.cc",
    "webrtc/test/fake_packet_socket_factory.h",
    "webrtc/test/fake_port_allocator_factory.cc",
    "webrtc/test/fake_port_allocator_factory.h",
    "webrtc/test/mock_sharing_connection_host.cc",
    "webrtc/test/mock_sharing_connection_host.h",
  ]

  deps = [
    ":sharing",
    "//base/test:test_support",
    "//testing/gmock",
    "//testing/gtest",
  ]
}
