# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("lib") {
  sources = [
    "soda_recognizer_impl.cc",
    "soda_recognizer_impl.h",
    "soda_service_impl.cc",
    "soda_service_impl.h",
  ]

  public_deps = [
    "//media/mojo/mojom",
    "//mojo/public/cpp/bindings",
    "//mojo/public/mojom/base",
  ]

  deps = [
    "//base",
    "//services/service_manager/public/cpp",
  ]
}
